--- a/content/classes/NRES803/Week_2/lab_2.html
+++ b/content/classes/NRES803/Week_2/lab_2.html
@@ -8,9 +8,9 @@ weight: 803021
 
 
 
-<p>This week will give you further practice with making plots, estimating linear models in R, and getting predicted values from those fitted models. This exercise will be completed by Friday afternoon at 5pm. Create a new project in RStudio named “yourlastname_lab2”. Submit the compressed project directory, which should include an R Markdown file that can be compiled directly to html without errors. The answers to the numbered questions should be in plain text. The code should be in R code chunks.</p>
+<p>This week will give you further practice with making plots, estimating linear models in R, and getting predicted values from those fitted models. Create a new project in RStudio named “yourlastname_lab2”. Submit the compressed project directory, which should include an R Markdown file that can be compiled directly to html without errors. The answers to the numbered questions should be in plain text. The code should be in R code chunks.</p>
 <hr />
-<p>Load the NRES803 package.</p>
+<p>Load the NRES803 package. If you are using the lab template, this can go in the setup chunk.</p>
 <pre class="r"><code>library(NRES803)
 data(RIKZ)
 dim(RIKZ)</code></pre>
@@ -18,7 +18,7 @@ dim(RIKZ)</code></pre>
 <pre class="r"><code>RIKZ$Richness &lt;- rowSums(RIKZ[,2:76] &gt; 0)
 dim(RIKZ)</code></pre>
 <p>You can see that we now have one more variable than before. Now we want to plot species richness against NAP, which is a measure of how far up the beach the sampling location is.</p>
-<pre class="r"><code>library(ggplot2)
+<pre class="r"><code>library(ggplot2) # unnecessary if you&#39;re using the template
 # make &quot;Beach&quot; into a factor otherwise treated as continuous
 RIKZ$fBeach &lt;- factor(RIKZ$Beach)
 Richness_NAP &lt;- ggplot(RIKZ, aes(x = NAP, y = Richness)) + 
@@ -69,8 +69,8 @@ summary(RIKZ_model.2)</code></pre>
 <p>Notice that there are only 4 weeks, with multiple observations per week. Another way to analyse this type of variable is to treat it as a categorical variable, and estimate a different parameter for each week. We can do this quickly like this:</p>
 <pre class="r"><code>RIKZ_model.3 &lt;- lm(Richness~factor(week), data=RIKZ)</code></pre>
 <p>However, this ends up labeling the parameters as factor(week) which is a bit odd, and makes it more difficult to do predictions from the model. A better approach is to change the variable in the dataframe:</p>
-<pre class="r"><code>RIKZ$fweek = factor(RIKZ$week)
-RIKZ_model.3 = lm(Richness ~ fweek, data = RIKZ)</code></pre>
+<pre class="r"><code>RIKZ$fweek &lt;- factor(RIKZ$week)
+RIKZ_model.3 &lt;- lm(Richness ~ fweek, data = RIKZ)</code></pre>
 <ol start="4" class="example" style="list-style-type: decimal">
 <li>Which model, 2 or 3, is a better predictor of Species Richness? Does model 3 fit the assumptions of the linear model?</li>
 </ol>
@@ -86,15 +86,15 @@ data.frame(fweek=factor(levels(RIKZ$fweek)))
 nd &lt;- data.frame(fweek=factor(levels(RIKZ$fweek)))</code></pre>
 <p>Whenever you come across a bit of R code that is doing something complicated, you can use this approach to decompose what is going on. This is a very powerful way to learn R.</p>
 <p>Now we need to use the nd data.frame, together with the fitted model object, to get the predicted values:</p>
-<pre class="r"><code>augment(RIKZ_model.3,newdata=nd)</code></pre>
+<pre class="r"><code>augment(RIKZ_model.3, newdata=nd, se_fit = TRUE)</code></pre>
 <p>This gives us a dataframe of mean species richness in each week and the standard errors.
 So the mean species richness in week 3 is 4.2±0.96 (SE). That’s nice, but it would be nicer if we could plot it on a figure. Save the predicted means and standard errors to an object named ‘predicted.Richness’ and make the plot again.</p>
-<pre class="r"><code>predicted.Richness &lt;- augment(RIKZ_model.3, newdata=nd)
+<pre class="r"><code>predicted.Richness &lt;- augment(RIKZ_model.3, newdata=nd, se_fit = TRUE)
 
 # have to set color explicitly otherwise looks for fbeach in predicted.Richness
 richness_week + geom_point(aes(x = fweek, y = .fitted), color = &quot;red&quot;, data = predicted.Richness)</code></pre>
 <p>That will fail with an error about a discrete value being supplied to a continuous scale. The problem is that we made the object richness_week with week not fweek. So let’s redo that object.</p>
-<pre class="r"><code>predicted.Richness &lt;- augment(RIKZ_model.3, newdata=nd)
+<pre class="r"><code>predicted.Richness &lt;- augment(RIKZ_model.3, newdata=nd, se_fit = TRUE)
 # redo the plot object
 richness_week &lt;- ggplot(RIKZ, aes(x = fweek, y = Richness, color = fBeach)) + 
   geom_point()
@@ -103,7 +103,7 @@ richness_week + geom_point(aes(x = fweek, y = .fitted), color = &quot;red&quot;,
   geom_errorbar(aes(x = fweek, 
                     ymin = .fitted - 1.96*.se.fit,
                     ymax = .fitted + 1.96*.se.fit), color = &quot;red&quot;, data = predicted.Richness, inherit.aes = FALSE)</code></pre>
-<p>This same procedure works with continuous variables too. If we only have a single linear covariate we can add <code>geom_smooth(method = &quot;lm&quot;)</code> to plot the fitted line but that won’t work for more complex models or for categorical variables.</p>
+<p>This same procedure works with continuous variables too. If we only have a single linear covariate we can add <code>geom_smooth(method = "lm")</code> to plot the fitted line but that won’t work for more complex models or for categorical variables.</p>
 <p>Both NAP and fweek seem to affect the response. Fit a linear regression model with main effects of both NAP and fweek, like this:</p>
 <pre class="r"><code>RIKZ_model.4 = lm(Richness ~ NAP + fweek, data = RIKZ)</code></pre>
 <ol start="5" class="example" style="list-style-type: decimal">
@@ -123,6 +123,7 @@ Richness_NAP + geom_line(aes(y = .fitted, group = fweek, linetype = fweek), colo
 <li>Examine the summary for this model and compare with the previous models.Also compare the coefficients for NAP and fweek with those estimated in models 1, 3 and 4 – are the qualitative conclusions (sign and magnitude) different with the interaction?</li>
 </ol>
 <p>The three interaction coefficients can be thought of as a change in the slope of NAP for weeks 2, 3 and 4. So we expect the line for week 2 to be shallower (less negative), while weeks 3 and 4 should be steeper (more negative). Confirm this interpretation by repeating the figure above using model 5 to get the predictions.</p>
-<pre class="r"><code># try with sum-to-zero contrasts
-options(contrasts = c(&quot;contr.sum&quot;,&quot;contr.poly&quot;))
-RIKZ_model.6 = lm(Richness~NAP*fweek,data=RIKZ)</code></pre>
+<ol start="7" class="example" style="list-style-type: decimal">
+<li><p>Which model would you choose to make inferences from and why?</p></li>
+<li><p>Looking at the figure from <code>RIKZ_model.5</code>, are there any features that would cause concern from an <em>ecological</em> (as opposed to a statistical) perspective? Look carefully at the expected values of species richness for each week (the plotted lines).</p></li>
+</ol>
