--- a/content/classes/NRES803/Week_2/lab_2.html
+++ b/content/classes/NRES803/Week_2/lab_2.html
@@ -1,7 +1,7 @@
 ---
 title: "Week 2 Lab"
 author: "Drew Tyre"
-date: "2017-08-01"
+date: "2020-08-25"
 output: html_document
 weight: 803021
 ---
@@ -11,15 +11,16 @@ weight: 803021
 <p>This week will give you further practice with making plots, estimating linear models in R, and getting predicted values from those fitted models. Create a new project in RStudio named “yourlastname_lab2”. Submit the compressed project directory, which should include an R Markdown file that can be compiled directly to html without errors. The answers to the numbered questions should be in plain text. The code should be in R code chunks.</p>
 <hr />
 <p>Load the NRES803 package. If you are using the lab template, this can go in the setup chunk.</p>
-<pre class="r"><code>library(NRES803)
+<pre class="r"><code>library(&quot;tidyverse&quot;)
+library(&quot;broom&quot;)
+library(&quot;NRES803&quot;)
 data(RIKZ)
 dim(RIKZ)</code></pre>
 <p>This file has 45 observations and 89 variables. Many of those variables are abundance measures for single species. These are in columns 2 through 76. To calculate species richness for each site we need to first use a logical variable to seperate the zeros from positive abundances. Then we add up each row. We can use a convenient function rowSum() that calculates the sum of each row in a matrix. The “&gt;0” part converts the count observations of species in columns 2 through 76 into presence/absence of each species. The result is a single vector that contains the species richness, or alpha diversity, of each site in the dataset.</p>
 <pre class="r"><code>RIKZ$Richness &lt;- rowSums(RIKZ[,2:76] &gt; 0)
 dim(RIKZ)</code></pre>
 <p>You can see that we now have one more variable than before. Now we want to plot species richness against NAP, which is a measure of how far up the beach the sampling location is.</p>
-<pre class="r"><code>library(ggplot2) # unnecessary if you&#39;re using the template
-# make &quot;Beach&quot; into a factor otherwise treated as continuous
+<pre class="r"><code># make &quot;Beach&quot; into a factor otherwise treated as continuous
 RIKZ$fBeach &lt;- factor(RIKZ$Beach)
 Richness_NAP &lt;- ggplot(RIKZ, aes(x = NAP, y = Richness)) + 
   geom_point(aes(color=fBeach))
@@ -28,8 +29,7 @@ Richness_NAP</code></pre>
 <pre class="r"><code>RIKZ_model.1 &lt;- lm(Richness ~ NAP, data = RIKZ)
 summary(RIKZ_model.1)</code></pre>
 <p>You’ve already done some interpretation of that model in the <a href="/classes/NRES803/readiness/">readiness assessment</a>. Let’s take a look at the assumptions of that model.</p>
-<pre class="r"><code>library(broom)
-test_RIKZ &lt;- augment(RIKZ_model.1, data=RIKZ)
+<pre class="r"><code>test_RIKZ &lt;- augment(RIKZ_model.1, data=RIKZ)
 ggplot(test_RIKZ, aes(x = .fitted, y = .resid)) + 
   geom_point(aes(color=fBeach)) + 
   geom_smooth()
