--- a/content/classes/NRES803/Week_5/lab_5.html
+++ b/content/classes/NRES803/Week_5/lab_5.html
@@ -217,7 +217,7 @@ ggplot(data = pred.p,
   xlab(&quot;Island Area [km^2]&quot;) + 
   ylab(&quot;Probability of Presence&quot;)</code></pre>
 <ol start="4" class="example" style="list-style-type: decimal">
-<li>Go back and make a new plot for the effect of isolation that includes the 95% confidence region.</li>
+<li>Go back and make a new plot for the effect of <em>isolation</em> (not area) that includes the 95% confidence region.</li>
 </ol>
 <p>What would happen if we used AIC model selection on this dataset?</p>
 <pre class="r"><code>models = list(incidence~1,
