--- a/content/classes/NRES803/Week_11/lab_11.html
+++ b/content/classes/NRES803/Week_11/lab_11.html
@@ -1,7 +1,7 @@
 ---
 title: "Week 11 Lab -- GLMM"
 author: "Drew Tyre"
-date: "2019-02-09"
+date: "2020-10-28"
 output: 
   html_document:
     fig_caption: TRUE
@@ -10,7 +10,7 @@ weight: 803111
 
 
 
-<p>The first dataset we’ll look at is from Zuur et al. (2009); the data are from Vicente et al. (2005) who looked at the distribution and faecal shedding patterns of 1st stage larvae of <em>Elaphostrongylus cervi</em> in red deer. Here we’re interested in the presence and absence of larvae in deer as functions of size (length in cm), sex, and farm identity.</p>
+<p>The first dataset we’ll look at is from Zuur et al. (2009); the data are from Vicente et al. (2005) who looked at the distribution and faecal shedding patterns of 1st stage larvae of <em>Elaphostrongylus cervi</em> in red deer. Here we’re interested in the presence and absence of larvae in deer as functions of size (length in cm), sex, and farm identity.</p>
 <pre class="r"><code>library(tidyverse)
 library(NRES803)
 library(lme4)
@@ -30,7 +30,7 @@ ggplot(ecervi, aes(x = cLength, y = Ecervi)) + geom_point() + facet_wrap(~fSex)<
 <pre class="r"><code>M0 &lt;- glmer(Ecervi.pa ~ fSex * cLength + (1 + fSex * cLength | Farm), data = ecervi, 
     family = binomial)
 summary(M0)</code></pre>
-<p>That model fails to converge. Asking for the sex by length interaction to vary among farms is probably too much given there are some farms with relatively few observations. Looking at the summary, especially the random effects estimates, it is clear that the scaling between Sex and Length is very different. A 1 cm change in length is a much smaller change than a change from male to female. This kind of discrepancy can make it harder for a model to converge. If I rescale Length by dividing through with the standard deviation the coefficients for those two variables will be closer, and this can help with convergence. I will also change the contrasts on Sex to “sum to zero” contrasts, which has a similar beneficial effect to centering a continuous variable.</p>
+<p>That model fails to converge, or at least is reporting some issues with the “singular fit” message. Asking for the sex by length interaction to vary among farms is probably too much given there are some farms with relatively few observations. Looking at the summary, especially the random effects estimates, it is clear that the scaling between Sex and Length is very different. A 1 cm change in length is a much smaller change than a change from male to female. This kind of discrepancy can make it harder for a model to converge. If I rescale Length by dividing through with the standard deviation the coefficients for those two variables will be closer, and this can help with convergence. I will also change the contrasts on Sex to “sum to zero” contrasts, which has a similar beneficial effect to centering a continuous variable.</p>
 <pre class="r"><code>ecervi &lt;- ecervi %&gt;% mutate(csLength = cLength/sd(Length))
 contrasts(ecervi$fSex) &lt;- contr.sum(2)
 
@@ -41,16 +41,18 @@ summary(M0)</code></pre>
 <pre class="r"><code>M0 &lt;- glmer(Ecervi.pa ~ fSex * csLength + (1 + fSex + csLength | Farm), data = ecervi, 
     family = binomial)
 summary(M0)</code></pre>
-<p>That model also fails to converge! Let’s check the two simpler models that allow fSex or csLength to vary across farms.</p>
+<p>That works! Let’s check the two simpler models that allow either fSex or csLength to vary across farms.</p>
 <pre class="r"><code>M0a &lt;- glmer(Ecervi.pa ~ fSex * csLength + (1 + csLength | Farm), data = ecervi, 
     family = binomial)
 summary(M0a)
-M0b &lt;- glmer(Ecervi.pa ~ fSex * csLength + (1 + fSex | Farm), data = ecervi, 
-    family = binomial)
+M0b &lt;- glmer(Ecervi.pa ~ fSex * csLength + (1 + fSex | Farm), data = ecervi, family = binomial)
 summary(M0b)</code></pre>
-<p>Both of those models converge. Check residuals for both. I will use the quantile residuals that I discussed in an earlier add on.</p>
+<p>The first model converges fine, the second one has issues with a “singular fit” again. If you look closely at the summary for <code>M0b</code>, you can see that the variance of the <code>fSex</code> random effect is nearly 0, and the correlation with the intercept is 1.00. I suspect the issue is with some farms having only males.</p>
+<pre class="r"><code>with(ecervi, table(Farm, fSex))</code></pre>
+<p>Yes, there are several. This might cause issues later, but ignore for now.</p>
+<p>Check residuals for both. I will use the randomized quantile residuals that I discussed in an earlier add on.</p>
 <pre class="r"><code>library(statmod)
-library(broom)
+library(broom.mixed)
 residM0a &lt;- augment(M0a)
 # residM0a$qr &lt;- qresiduals(M0a) # error prevents knitting</code></pre>
 <p>Well that sucks. A bit of digging around in source code followed and I fixed the underlying qres.binom so it works with S4 instead of S3 objects.</p>
@@ -66,11 +68,11 @@ residM0a &lt;- augment(M0a)
     qnorm(u)
 }
 residM0a$qr &lt;- qres.binom(M0a)</code></pre>
-<pre class="r"><code>ggplot(residM0a, aes(x = .fitted, y = qr)) + geom_point() + geom_smooth() + 
-    geom_hline(yintercept = 0, linetype = 2)
+<pre class="r"><code>ggplot(residM0a, aes(x = .fitted, y = qr)) + geom_point() + geom_smooth() + geom_hline(yintercept = 0, 
+    linetype = 2)
 
-ggplot(residM0a, aes(x = csLength, y = qr)) + geom_point() + geom_smooth() + 
-    geom_hline(yintercept = 0, linetype = 2)
+ggplot(residM0a, aes(x = csLength, y = qr)) + geom_point() + geom_smooth() + geom_hline(yintercept = 0, 
+    linetype = 2)
 
 probs &lt;- c(0.25, 0.75)
 y &lt;- quantile(residM0a$qr, probs, names = FALSE, na.rm = TRUE)
@@ -82,7 +84,7 @@ ggplot(residM0a, aes(sample = qr)) + geom_qq(size = rel(4)) + geom_abline(interc
 
 ggplot(residM0a, aes(x = .fitted, y = sqrt(abs(qr)))) + geom_point() + geom_smooth() + 
     geom_hline(yintercept = 1)</code></pre>
-<p>Those all look fine.</p>
+<p>Those all look fine. If you rerun <code>qres.binom()</code> you’ll notice that the plots look different. These residuals are “randomized”, meaning that they are drawn randomly from the distribution of the residuals, not the actual fixed values themselves. So they do fluctuate. Pay most attention to the confidence envelope – if there is a flat line everywhere inside the envelope, any fluctuations up and down can be ignored.</p>
 <ol class="example" style="list-style-type: decimal">
 <li>Repeat the residual checks with M0b, the model with the other random effect. Are there any differences? Which one looks like a better model?</li>
 </ol>
@@ -90,15 +92,15 @@ ggplot(residM0a, aes(x = .fitted, y = sqrt(abs(qr)))) + geom_point() + geom_smoo
 <pre class="r"><code>fe &lt;- c(&quot;1&quot;, &quot;fSex&quot;, &quot;csLength&quot;, &quot;fSex + csLength&quot;, &quot;fSex * csLength&quot;)
 re &lt;- c(&quot;(1 | Farm)&quot;, &quot;(1 | Farm) + (0 + fSex | Farm)&quot;, &quot;(1 | Farm) + (0 + csLength | Farm)&quot;, 
     &quot;(1 | Farm) + (0 + fSex | Farm) + (0 + csLength | Farm)&quot;, &quot;(1 + fSex | Farm)&quot;, 
-    &quot;(1 + csLength | Farm)&quot;)
+    &quot;(1 + csLength | Farm)&quot;, &quot;(1 + csLength + fSex | Farm)&quot;)
 forms &lt;- expand.grid(LHS = &quot;Ecervi.pa ~&quot;, fe = fe, re = re)
-models &lt;- forms %&gt;% mutate(RHS = paste(fe, re, sep = &quot;+&quot;), model = paste(LHS, 
-    RHS), fits = map(model, ~glmer(as.formula(.x), data = ecervi, family = binomial)))</code></pre>
+models &lt;- forms %&gt;% mutate(RHS = paste(fe, re, sep = &quot;+&quot;), model = paste(LHS, RHS), 
+    fits = map(model, ~glmer(as.formula(.x), data = ecervi, family = binomial)))</code></pre>
 <p>A few of those models failed to converge. Figuring out which ones is a bit involved. Reading documentation for merMod objects there is a slot for information on the optimization, and a bit of experimenting determined that I could check for the object lme4 to have length &gt; 0.</p>
 <pre class="r"><code>models &lt;- mutate(models, converged = !map_lgl(fits, ~length(.x@optinfo$conv$lme4) &gt; 
     0))
 which(!models$converged)</code></pre>
-<p>Now we’re ready to see which models are the best, keeping a wary eye out for models 6, 9, 18.</p>
+<p>Now we’re ready to see which models are the best, keeping a wary eye out for those models that had convergence issues.</p>
 <pre class="r"><code>library(MuMIn)
 library(pander)
 pander(model.sel(models$fits))</code></pre>
@@ -118,23 +120,23 @@ nd$pp = predict(topmod, newdata = nd, type = &quot;response&quot;, re.form = ~0)
 # ggplot(nd, aes(x=csLength, y=pp, col=fSex, group=Farm:fSex)) +
 # geom_line(alpha=0.5) + ylab(&#39;Probability of E. cervi infection&#39;) +
 # geom_line(aes(x=csLength, y=pp, col=fSex), data=nd, inherit.aes = FALSE,
-# size=2) + geom_rug(aes(x=csLength), data=filter(ecervi,
-# Ecervi.pa),sides=&#39;t&#39;, inherit.aes = FALSE) + geom_rug(aes(x=csLength),
-# data=filter(ecervi, !Ecervi.pa),sides=&#39;b&#39;, inherit.aes = FALSE)
+# size=2) + geom_rug(aes(x=csLength), data=filter(ecervi, Ecervi.pa),sides=&#39;t&#39;,
+# inherit.aes = FALSE) + geom_rug(aes(x=csLength), data=filter(ecervi,
+# !Ecervi.pa),sides=&#39;b&#39;, inherit.aes = FALSE)
 
 ggplot(nd, aes(x = csLength, y = pp, col = fSex)) + geom_line() + xlab(&quot;Centered and scaled Length&quot;) + 
-    ylab(&quot;Probability of E. cervi infection&quot;) + geom_rug(aes(x = csLength), 
-    data = filter(ecervi, Ecervi.pa), sides = &quot;t&quot;, inherit.aes = FALSE) + geom_rug(aes(x = csLength), 
-    data = filter(ecervi, !Ecervi.pa), sides = &quot;b&quot;, inherit.aes = FALSE)</code></pre>
+    ylab(&quot;Probability of E. cervi infection&quot;) + geom_rug(aes(x = csLength), data = filter(ecervi, 
+    Ecervi.pa), sides = &quot;t&quot;, inherit.aes = FALSE) + geom_rug(aes(x = csLength), data = filter(ecervi, 
+    !Ecervi.pa), sides = &quot;b&quot;, inherit.aes = FALSE)</code></pre>
 <p>These lines represent the effect of length and sex for a typical farm.</p>
 <ol start="3" class="example" style="list-style-type: decimal">
-<li>Repeat the model selection process for fixed effects using <code>glm()</code>, i.e. ignoring the correlation within farms. Compare and contrast the results that you get, both the magnitude and direction of the coefficients, as well as their relative standard errors.</li>
+<li>Repeat the model selection process for fixed effects using <code>glm()</code>, i.e. ignoring the variation between farms. Compare and contrast the results that you get, both the magnitude and direction of the coefficients, as well as their relative standard errors.</li>
 </ol>
 <div id="inference-with-mixed-models" class="section level2">
 <h2>Inference with mixed models</h2>
 <p>There is a significant and on-going debate about how best to do inference with this sort of model. One way around the debate is to use parametric bootstrapping to estimate things like the standard errors of the predictions and confidence intervals on the coefficients. <code>lme4</code> has a premade function to get confidence intervals on the coefficients. <em>WARNING</em> this line of code will take &gt; 20 minutes to run. Forget about these unless you’ve got alot of time.</p>
-<pre class="r"><code># returns a matrix with estimates plus confidence intervals for all fixed
-# and random effects parameters
+<pre class="r"><code># returns a matrix with estimates plus confidence intervals for all fixed and
+# random effects parameters
 topmod.CI &lt;- confint(topmod, method = &quot;boot&quot;, oldNames = FALSE)
 topmod.CI</code></pre>
 <p>This function draws random samples of the random effects and the i.i.d. errors, generates a simulated response based on those error values, and then re-estimates the model. The confidence limits are based on the quantiles of the distribution of parameter estimates generated from 500 simulations. If fitting the original model takes a couple seconds, this routine will take 500 times as long to complete! You will also probably see warnings about convergence failures – all this reminds us that we’re out on the bleeding edge of computational statistics here.</p>
@@ -148,7 +150,7 @@ rownames(topmod.WaldCI) &lt;- NULL
 names(topmod.profCI) &lt;- c(&quot;Profile_CI2.5&quot;, &quot;Profile_CI97.5&quot;)
 names(topmod.WaldCI) &lt;- c(&quot;Wald_CI2.5&quot;, &quot;Wald_CI97.5&quot;)
 
-topmod.CI &lt;- tidy(topmod)  # from broom
+topmod.CI &lt;- tidy(topmod)  # from broom.mixed
 # add the profile intervals -- confint() uses a different order from tidy()
 topmod.CI &lt;- cbind(topmod.CI, topmod.profCI[c(4:7, 1, 3, 2), ], topmod.WaldCI[c(4:7, 
     1, 3, 2), ])
@@ -165,7 +167,7 @@ ggplot(topmod.CI, aes(x = term, y = estimate, fill = type)) + geom_bar(stat = &q
     position = &quot;dodge&quot;) + geom_errorbar(aes(ymin = CI2.5, ymax = CI97.5), position = &quot;dodge&quot;)</code></pre>
 <p>It can be hard to see what is going on unless you use the “zoom” to make this plot large enough for the term names to not overlap.
 So the intervals for the intercept and sex effects are pretty close to the “simple” Wald intervals. The intervals for csLength and the interaction are longer with profile intervals, but at least they still exclude zero. In addition, the profile method gives us intervals on the variance parameters as well.</p>
-<p>The reason it is hard to get confidence intervals on predictions is because of the uncertainty in the variance parameters, which can be substantial. The correlation coefficient includes zero, for example. This makes sense, as the 2nd best model was a model that assumed the random effects were uncorrelated.</p>
+<p>The reason it is hard to get confidence intervals on predictions is because of the uncertainty in the variance parameters, which can be substantial. The sd of the csLength random effect includes zero, for example. This makes sense, as the differences among the top 3 models were all in the random effects.</p>
 </div>
 <div id="but-what-the-heck-is-a-profile-limit" class="section level2">
 <h2>But what the heck <em>IS</em> a profile limit?</h2>
