fix for nonlinear models lab Q4

--- a/content/classes/NRES803/Week_13/Lab_13.html
+++ b/content/classes/NRES803/Week_13/Lab_13.html
@@ -1,7 +1,7 @@
 ---
 title: "Week 13 - Non-linear models 1"
 author: "Drew Tyre"
-date: "2019-02-09"
+date: "2020-11-10"
 output: html_document
 weight: 803131
 ---
@@ -63,7 +63,7 @@ Y = \frac{aC}{1 + bC + fD}
 summary(wheat_nl)</code></pre>
 <p>Figuring out what those parameters mean is always a good trick! I think we can interpret <span class="math inline">\(f\)</span> and <span class="math inline">\(b\)</span> as per-seed competition coefficients for inter- and intra specific competition, respectively. So an additional barley seed has about 3 x the competitive effect of adding another wheat seed. Taking the limit as C goes to infinity for a fixed value of D, we get <span class="math inline">\(Y_{max} = a/b\)</span>, or about 3 kg.</p>
 <ol start="4" style="list-style-type: decimal">
-<li>Make a plot of the raw data for a single wheat seed rate, add the predicted lines for the model fitted above for question 3, and a predicted line for the model with both wheat and barley.</li>
+<li>Make a plot of the raw data, add the predicted lines for the model with both wheat and barley.</li>
 </ol>
 <div id="optional" class="section level1">
 <h1>Optional</h1>
