NRES803data fix

--- a/content/classes/NRES803/Week_3/lab_3.html
+++ b/content/classes/NRES803/Week_3/lab_3.html
@@ -6,6 +6,7 @@ output: html_document
 weight: 803031
 ---
 
+<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <p>In this week’s lab exercise we will first go through calculating the AIC values “by hand”, and then using a addon package <code>MuMIn</code>. Doing the calculations by hand serves three purposes: 1) you practice using R!, 2) you gain a deeper understanding of how much work the add-on package is doing for you, and 3) sometimes the add-on package won’t work for a new class of model, and if you can do it by hand you won’t be stuck.</p>
